Use nicer matchers to get rid unwrap() in action.rs

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,9 @@
 Todos roughly in priority order (most urgent to least).
 
-Implement action Result types as described in design doc.
+UNIT TESTS
+Implement action Result types as described in design doc. DONE
+Clean up all the unwrap calls.
 Atomic Update model as described in design doc.
-Clean up all the unwrap() calls.
 Inventory Display.
 Inventory managment with non-hardcoded indices.
 Crafting.
